miniextendr-macros/tests/ui/impl_trait_arg.stderr
error[E0562]: `impl Trait` is not allowed in the type of variable bindings
 --> tests/ui/impl_trait_arg.rs:9:24
  |
9 | fn takes_impl_trait(x: impl AsRef<str>) -> String {
  |                        ^^^^^^^^^^^^^^^
  |
  = note: `impl Trait` is only allowed in arguments and return types of functions and methods
  = note: see issue #63065 <https://github.com/rust-lang/rust/issues/63065> for more information
